--- a/public/index.css
+++ b/public/index.css
@@ -75,7 +75,6 @@
     display:block;
     font-size:12px;
     font-weight:700;
-    color:#999;
     margin-bottom:3px
 }
 .WalletInfo__balance{
@@ -182,6 +181,7 @@
     margin-bottom:8px
 }
 .Input__input{
+    color: #000;
     width:100%;
     font-size:14px;
     border:1px solid #e1e1e1;
@@ -207,8 +207,8 @@
 .Button{
     -webkit-appearance:none;
     width:100%;
-    background-color:#e1e1e1;
-    color:#999;
+    background-color:#4f473e;
+    color:#fff;
     border-radius:5px;
     text-align:center;
     font-size:12px;
@@ -490,7 +490,6 @@ body{
     font-family:SFUIText,Apple SD Gothic Neo,sans-serif;
     font-size:14px;
     line-height:18px;
-    color:#4f473e
 }
 body *,body :after,body :before{
     box-sizing:border-box;
